--- a/ClientApp2/package.json
+++ b/ClientApp2/package.json
@@ -44,6 +44,7 @@
     "@angular/router": "^5.0.0",
     "@ngtools/webpack": "1.8.0",
     "@types/webpack-env": "1.13.0",
+    "angular-auth-oidc-client": "3.0.4",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
