--- a/ApiApp/appsettings.json
+++ b/ApiApp/appsettings.json
@@ -7,5 +7,6 @@
   },
   "IdentityServerAddress": "http://localhost:5000",
   "ClientAddress": "http://localhost:5002",
-  "ClientAddress2": "http://localhost:5010"
+  "ClientAddress2": "http://localhost:5010",
+  "PetitionsClientAddress": "http://localhost:5021"
 }
