--- a/IdentityApp/appsettings.json
+++ b/IdentityApp/appsettings.json
@@ -10,5 +10,6 @@
     }
   },
   "ClientAddress": "http://localhost:5002",
-  "ClientAddress2": "http://localhost:5010"
+  "ClientAddress2": "http://localhost:5010",
+  "PetitionsClientAddress": "http://localhost:5021"
 }
