--- a/PetitionsClient/appsettings.json
+++ b/PetitionsClient/appsettings.json
@@ -1,7 +1,17 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
     }
-  }
+  },
+  "IdentityServerAddress": "http://localhost:5000",
+  "ApiAddress": "http://localhost:5001/api/"
 }
