Petitions api was added

--- a/PetitionsApi/appsettings.json
+++ b/PetitionsApi/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -13,5 +13,6 @@
     }
   },
   "IdentityServerAddress": "http://localhost:5000",
-  "ApiAddress": "http://localhost:5011/api/"
+  "ClientAddress": "http://localhost:5002",
+  "PetitionsClientAddress": "http://localhost:5010"
 }
