--- a/Petitions.Domain/Petitions.Domain.csproj
+++ b/Petitions.Domain/Petitions.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CqrsLite" Version="0.21.0" />
+  </ItemGroup>
+
 </Project>
