--- a/Petitions.Domain/Petitions.Domain.csproj
+++ b/Petitions.Domain/Petitions.Domain.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="CqrsLite" Version="0.21.0" />
+    <PackageReference Include="MediatR" Version="4.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
   </ItemGroup>
 
 </Project>
