--- a/Petitions.Infrastructure/appsettings.json
+++ b/Petitions.Infrastructure/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PetitionsDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PetitionsServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
