--- a/CityServicesPortal.Petitions.Core/CityServicesPortal.Petitions.Core.csproj
+++ b/CityServicesPortal.Petitions.Core/CityServicesPortal.Petitions.Core.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="CqrsLite" Version="0.21.0" />
+    <PackageReference Include="EntityFrameworkCore.SqlServer.DateDiff" Version="1.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
