--- a/CityServicesPortal.Petitions.Api/CityServicesPortal.Petitions.Api.csproj
+++ b/CityServicesPortal.Petitions.Api/CityServicesPortal.Petitions.Api.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+    <PackageReference Include="MediatR" Version="4.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
@@ -20,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CityServicesPortal.Petitions.Domain\CityServicesPortal.Petitions.Domain.csproj" />
+    <ProjectReference Include="..\CityServicesPortal.Petitions.Infra.IoC\CityServicesPortal.Petitions.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
