--- a/PetitionsClient/Properties/launchSettings.json
+++ b/PetitionsClient/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5010/",
+      //"applicationUrl": "http://localhost:5010/",
+      "applicationUrl": "http://localhost:5002/",
       "sslPort": 0
     }
   },
