--- a/PetitionsClient/package.json
+++ b/PetitionsClient/package.json
@@ -24,7 +24,7 @@
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "3.2.1",
-    "bootstrap": "4.0.0",
+    "bootstrap": "^4.0.0",
     "css": "2.2.1",
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
@@ -36,6 +36,7 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "ngx-bootstrap": "^2.0.3",
     "popper.js": "^1.12.9",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
