--- a/PetitionsClient/package.json
+++ b/PetitionsClient/package.json
@@ -17,6 +17,10 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@fortawesome/angular-fontawesome": "0.1.0-8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-10",
+    "@fortawesome/free-regular-svg-icons": "^5.1.0-4",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-4",
     "@ngtools/webpack": "^1.8.0",
     "@types/webpack-env": "1.13.0",
     "angular-auth-oidc-client": "3.0.4",
