--- a/PetitionsClient/PetitionsClient.csproj
+++ b/PetitionsClient/PetitionsClient.csproj
@@ -26,6 +26,7 @@
     <None Remove="ClientApp\app\components\models\constant.ts" />
     <None Remove="ClientApp\app\components\models\petition\petition.ts" />
     <None Remove="ClientApp\app\components\models\petition\register-petition.ts" />
+    <None Remove="ClientApp\app\components\models\review\review.ts" />
     <None Remove="ClientApp\app\components\models\user\user-short.ts" />
     <None Remove="Properties\PublishProfiles\PetitionsClient20180217115551 - Web Deploy.pubxml" />
   </ItemGroup>
@@ -39,6 +40,7 @@
     <TypeScriptCompile Include="ClientApp\app\components\models\constant.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\models\petition\petition.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\models\petition\register-petition.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\models\review\review.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\models\user\user-short.ts" />
   </ItemGroup>
 
