--- a/CityServicesPortal.Petitions.Api/appsettings.json
+++ b/CityServicesPortal.Petitions.Api/appsettings.json
@@ -14,5 +14,8 @@
         "Default": "Warning"
       }
     }
-  }
+  },
+  "IdentityServerAddress": "http://localhost:5000",
+  "ClientAddress": "http://localhost:5002",
+  "PetitionsClientAddress": "http://localhost:5010"
 }
